12-config/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-page
          mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: nginx-page
        configMap:
          name: deploy-data
